fix: clean up